cluster/monitoring/karma/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karma
  namespace: monitoring
  labels:
    app.kubernetes.io/name: karma
    app.kubernetes.io/instance: karma
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: karma
      app.kubernetes.io/instance: karma
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karma
        app.kubernetes.io/instance: karma
    spec:
      containers:
        - name: karma
          # renovate: registryUrl=https://github.com/prymitive/karma
          image: ghcr.io/prymitive/karma:v0.109
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 15m
              memory: 105Mi
            limits:
              memory: 105Mi
